CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(TX_Gechter)

SET(EXE_NAME "TX_Gechter")

SET(EXECUTABLE_OUTPUT bin/${CMAKE_BUILD_TYPE})

FILE (GLOB_RECURSE sourceFiles src/*)

ADD_EXECUTABLE(${EXE_NAME} ${sourceFiles})

FIND_FILE(SFML_CMAKE_DIR "cmake/Modules/FindSFML.cmake")
if(SFML_CMAKE_DIR)
	string(REPLACE "FindSFML.cmake" "" SFML_CMAKE_DIR ${SFML_CMAKE_DIR})
	set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${SFML_CMAKE_DIR}")
endif()
FIND_PACKAGE(SFML COMPONENTS system window graphics audio network REQUIRED)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${SFML_LIBRARIES})